# smartpole_screen_qt6.7.2

./: CMakeLists.txt  Main.qml  README.md  RadialBarProgress.qml  VideoView.qml  dashboardController.cpp  dashboardController.h  main.cpp  main.cpp.autosave  mqttHandler.cpp  mqttHandler.h  serialObserver.cpp  serialObserver.h  videoController.cpp  videoController.h
serial/: ODR_01.cpp  ODR_01.h  rs485.cpp  rs485.h  serial_interface.cpp  serial_interface.h  serial_port.cpp  serial_port.h
